Fix experiment card padding on small device

--- a/src/assets/sass/master.sass
+++ b/src/assets/sass/master.sass
@@ -98,7 +98,7 @@ $gray: #a7a7a7
 
 .badge
   height: 2rem
-  width: 2rem
+  width: 2.02rem
   display: block
   margin: 0.3rem
 
@@ -196,8 +196,15 @@ $gray: #a7a7a7
   .button
     padding: 0.7rem 1rem
 
-  .card > h1
+  .card
+    padding: 1.4rem
+
+  .card h1
     font-size: 1.7rem
+
+  .badge
+    height: 1.5rem
+    width: 1.5rem
 
 @media (max-width: 568px)
   .container
